Tue Apr 12 11:56:26 CDT 2005  Will Otte <wotte@dre.vanderbilt.edu>
	
	* DAnCE/ciao/Dynamic_Component_Activator.cpp
	* DAnCE/ciao/Servant_Activator.cpp
	* DAnCE/ciao/Servant_Impl_Base.cpp

	Fixed some more compile errors with emulated exceptions.
	
Tue Apr 12 11:11:41 CDT 2005  Will Otte  <wotte@dre.vanderbilt.edu>
	
	* DAnCE/ciao/Servant_Impl_Base.cpp

	Fixed some compile errors with emulated exceptions.
	
Mon Apr 11 23:54:21 2005  Gan Deng  <dengg@dre.vanderbilt.edu>

        * DAnCE/NodeApplicationManager/ImplementationInfo.cpp

	  Fixed a bug where multiple "_svnt" and "_exec" libs for
	  a given MonolithicDeploymentDescription could cause
	  chaos while pupulating ImplementationInfo stuct. This
	  fix now only consides the first "_svnt" and "_exec"
	  libs, and ignore remaining ones. A better solution will
	  be enforcing any MonolithicDeploymentDescription could
	  only have exactly one _svnt and one _exec lib. This 
	  will be achieved through the flattened deployment plan.

Mon Apr 11 17:56:22 2005  Jaiganesh B  <jai@dre.vanderbilt.edu>

        * DAnCE/DomainApplicationManager/DomainApplicationManager.mpc:
        * DAnCE/ExecutionManager/ExecutionManager.mpc:
        * DAnCE/NodeApplication/NodeApplication.mpc:
        * DAnCE/NodeApplicationManager/NodeApplicationManager.mpc:
        * DAnCE/Plan_Launcher/Plan_Launcher.mpc:

          Added typecodefactory to the list of project files.

Mon Apr 11 13:43:47 CDT 2005  Will Otte <wotte@dre.vanderbilt.edu>

	* DAnCE/Plan_Launcher/Plan_Launcher.cpp

	Corrected the ExecutionManager narrow operation.

Mon Apr 11 08:29:50 2005  Jeff Parsons <j.parsons@vanderbilt.edu>

        * DAnCE/ciao/Container_Impl.cpp:
        * DAnCE/ciao/Dynamic_Component_Activator.cpp:
        * DAnCE/ciao/Dynamic_Component_Activator.h:
        * DAnCE/ciao/NodeApplication_Impl.cpp:
        * DAnCE/ciao/NodeApplication_Impl.h:
        * DAnCE/ciao/Swapping_Container.cpp:
        * DAnCE/ciao/Swapping_Container.h:
