@@ -1,3 +1,10 @@
+Tue Apr 12 14:35:58 CDT 2005  Will Otte <wotte@dre.vanderbilt.edu>
+	
+	* CIAO-INSTALL.html
+
+	Updated to include Xerces information.  Also cleaned up the
+	file a bit and made it XHTML compliant. 
+	
 Tue Apr 12 11:56:26 CDT 2005  Will Otte <wotte@dre.vanderbilt.edu>
 	
 	* DAnCE/ciao/Dynamic_Component_Activator.cpp
